docs/v1.0.14/Version-History.md
## [Version History](#Version-History)


| Version | Last Updated | Author |  Release Note|
| ---- | ---- | ---- | ---- |
| v8.3.2  | 01 Jul, 2026 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Added `lang` parameter in Autosuggest & Nearby Response </br> - Added Reverse Geocode Nearby   </br> - Added `validIndication` in `IntersectionLanes` in Routing Response                    |
| v8.3.1  | 31 Mar, 2026     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Remove `hyperLocal` & `zoom` from Autosugget Request. </br> - Remove `user` & `score` from Autosuggest Response. </br> - Added `searchType` in Autosuggest, Nearby & Reverse Geocode </br> - Added `bounds`, `bridge` and `refLocation` in Poi Along Route Request </br> - Added `suggestedSearchAtlas` in Poi Along Route Response  </br> - Added `actualGeoLevel` in Geocode Request </br> - Added `mapplsPinAdminType` in Geocode Response </br> - Remove `username`, `ignoreAutoExpand` & `includes` from Nearby Request </br> - Added `isVenue` & `venueDetails` in Reverse Geocode Response </br> - Remove `username` from Text Search Request. </br> - Added `tollPass` and `eType` in Routing request. </br> - Added `npToll` in Route Classes, `fromNodeIdx` and `toNodeIdx` in Leg Step & `consumption` in Annotation of Routing Response. </br>  - Fix request key `use_highways` from `use_highway` in Predective Route API                    |
| v8.3.0  | 01 Sep, 2025     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Added 16 KB Support </br> - Updated minimum Android version to 21.                                                                                    |
| v8.2.9  | 05 May, 2025     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Added Ev Routing Api. </br> - Added Method to clear Map Cache                                                                                    |
| v8.2.8  | 08 Apr, 2025     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Implemented GPS priority in location settings to ensure location is obtained exclusively from GPS, disregarding network-based providers. </br> - Updated to latest DIGIPIN logic.                                                                                  |
| v8.2.7  | 03 Feb, 2025     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Added `routeId` in Route Report Response </br> - Added `radioType` in Geolocation Api Request </br> - Added `accuracy` in Geolocation Api Response </br> - Added `filter` in Poi Along the Route Api Request </br> - Added `hourOfOperation`, `longDescription`, `shortDescription`, `richInfo` and `partnersFlag` in Poi Along the Route Api Response  </br> - Revamped Smart Trip Planning Api </br> - Added `DigipinUtility` for getting DIGIPIN from Coordinates and vice versa </br> - Added Entry Coordinates in Reverse Geocode Response </br> - Added internal Retry </br> - Bug Fixes and Security Enhancement                                                                                          |
| v8.2.6  | 14 Nov, 2024     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Bug Fixes & Improvements                                                                                           |
| v8.2.5  | 10 Oct, 2024     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Added EV Smart Trip Planner Api                                                                                            |
| v8.2.4  | 09 Sep, 2024     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Added 100 Coordinates Support in Distance Matrix                                                                                            |
| v8.2.3  | 24 Jul, 2024     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Added Negative Latitude & Longitude Support in Autosuggest, Text Search and Nearby <br/> - Bug Fixes & Improvements                                                                                            |
| v8.2.2  | 04 May, 2024     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Added Census and LGD codes in `Geocode` and `Reverse Geocode`                                                                                                                       |
| v8.2.1  | 02 Apr, 2024     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Bug Fixes & Improvements                                                                                                                       |
| v8.2.0  | 14 Feb, 2024     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Added ApiResponse for Background api calls to get the Response code of failure. <br/>  - Bug Fixes & Improvements                                                                                                                       |
| v8.1.3  | 4 Feb, 2024     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Bug Fixes & Improvements                                                                                                                        |
| v8.1.2  | 28 Dec, 2023     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Bug Fixes & Improvements                                                                                                                        |
| v8.1.1  | 21 Nov, 2023     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Added `PageInfo` in POI Along Route Response.  <br/> - Bug Fixes & Improvements                                                                                                                        |
| v8.1.0  | 30 Oct, 2023     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Security Improvements                                                                                                                     |
| v8.0.9  | 30 June, 2023     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Added `getCoordinates()` in DirectionRoute.  <br/> - Bug Fixes & Improvements                                                                                                                     |  
| v8.0.8  | 02 June, 2023     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Added Location play service v21.0.1 Support.  <br/> - Bug Fixes & Improvements                                                                                                                     |
| v8.0.7  | 02 May, 2023      | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Added Predective Routing APIs.  <br/> - Bug Fixes & Improvements                                                                                                                                   |
| v8.0.6  | 03 April, 2023 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Added Geolocation API  <br/> - Added `routeIndex` request parameter in Trip Cost Estimation API. <br/> - Added `lang` request parameter  in Reverse Geocode API.  <br/> - Bug Fixes & Improvements |
| v8.0.5 | 06 February, 2023 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |   - Added Error Codes while initialising the map  <br/> - Added Reset Compass Engine  <br/> - Bug Fixes & Improvements |
| v8.0.4 | 18 October 2022 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |   - Added PlaceClickListener on map which provides `mapplsPin`<br/> - Bug Fixes & Improvements |
| v8.0.3 | 26 September 2022 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |   - Added Weather API  |
| v8.0.2 | 28 August 2022 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |   - Added Android auto support  |
| v8.0.1 | 19 August 2022 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |   - Added `mapplsPin` in Reverse Geocode <br/> - Bug Fixes|
| v8.0.0 | 14 June 2022 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |   Initial release  |
